--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lucide-react": "^0.517.0",
     "next": "15.3.4",
     "pretendard": "^1.3.9",
     "react": "^19.0.0",
