--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.3.4",
     "pretendard": "^1.3.9",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-spinners": "^0.17.0",
