--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-spinners": "^0.17.0",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
